// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable component supports data table with column sorting 1`] = `
"<div
  class=\\"mdc-data-table\\"
>
  <div
    class=\\"mdc-data-table__table-container\\"
  >
    <table
      class=\\"mdc-data-table__table\\"
    >
      <thead>
        <tr
          class=\\"mdc-data-table__header-row\\"
        >
          <th
            aria-sort=\\"ascending\\"
            class=\\"mdc-data-table__header-cell mdc-data-table__header-cell--numeric id-cell mdc-data-table__header-cell--with-sort mdc-data-table__header-cell--sorted\\"
            data-column-id=\\"id\\"
            role=\\"columnheader\\"
            scope=\\"col\\"
          >
            <div
              class=\\"mdc-data-table__header-cell-wrapper\\"
            >
              <button
                class=\\"mdc-icon-button material-icons mdc-data-table__sort-icon-button\\"
              >
                arrow_upward
              </button>
              <div
                class=\\"mdc-data-table__header-cell-label\\"
              >
                ID
              </div>
              <div
                aria-hidden=\\"true\\"
                class=\\"mdc-data-table__sort-status-label\\"
              />
            </div>
          </th>
          <th
            aria-sort=\\"none\\"
            class=\\"mdc-data-table__header-cell composer-cell mdc-data-table__header-cell--with-sort\\"
            data-column-id=\\"composer-name\\"
            role=\\"columnheader\\"
            scope=\\"col\\"
          >
            <div
              class=\\"mdc-data-table__header-cell-wrapper\\"
            >
              <div
                class=\\"mdc-data-table__header-cell-label\\"
              >
                Composer Name
              </div>
              <button
                class=\\"mdc-icon-button material-icons mdc-data-table__sort-icon-button\\"
              >
                arrow_upward
              </button>
              <div
                aria-hidden=\\"true\\"
                class=\\"mdc-data-table__sort-status-label\\"
              />
            </div>
          </th>
          <th
            class=\\"mdc-data-table__header-cell none\\"
            role=\\"columnheader\\"
            scope=\\"col\\"
          >
            
          </th>
        </tr>
      </thead>
      <tbody
        class=\\"mdc-data-table__content\\"
      >
        <tr
          class=\\"mdc-data-table__row\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            1
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
          >
            Wolfgang Amadeus Mozart
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./1\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            2
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
          >
            Ludwig van Beethoven
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./2\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            3
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
          >
            Antonio Vivaldi
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./3\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            4
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
          />
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./4\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            5
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
          >
            George Frideric Handel
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./5\\"
            >
              Show Details
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`DataTable component supports data table with pagination 1`] = `
"<div
  class=\\"mdc-data-table\\"
>
  <div
    class=\\"mdc-data-table__table-container\\"
  >
    <table
      class=\\"mdc-data-table__table\\"
    >
      <thead>
        <tr
          class=\\"mdc-data-table__header-row\\"
        >
          <th
            class=\\"mdc-data-table__header-cell mdc-data-table__header-cell--numeric id-cell\\"
            role=\\"columnheader\\"
            scope=\\"col\\"
          >
            ID
          </th>
          <th
            class=\\"mdc-data-table__header-cell composer-cell\\"
            role=\\"columnheader\\"
            scope=\\"col\\"
          >
            Composer Name
          </th>
          <th
            class=\\"mdc-data-table__header-cell none\\"
            role=\\"columnheader\\"
            scope=\\"col\\"
          >
            
          </th>
        </tr>
      </thead>
      <tbody
        class=\\"mdc-data-table__content\\"
      >
        <tr
          class=\\"mdc-data-table__row\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            1
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
          >
            Wolfgang Amadeus Mozart
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./1\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            2
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
          >
            Ludwig van Beethoven
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./2\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            3
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
          >
            Antonio Vivaldi
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./3\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            4
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
          />
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./4\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            5
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
          >
            George Frideric Handel
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./5\\"
            >
              Show Details
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class=\\"mdc-data-table__pagination\\"
  >
    <div
      class=\\"mdc-data-table__pagination-trailing\\"
    >
      <div
        class=\\"mdc-data-table__pagination-rows-per-page\\"
      >
        <div
          class=\\"mdc-select mdc-select--outlined mdc-data-table__pagination-rows-per-page-select\\"
        >
          <div
            aria-disabled=\\"false\\"
            aria-haspopup=\\"listbox\\"
            class=\\"mdc-select__anchor\\"
            role=\\"button\\"
            tabindex=\\"0\\"
          >
            
            <span
              class=\\"mdc-select__selected-text\\"
            >
              10
            </span>
            <span
              class=\\"mdc-select__dropdown-icon\\"
            >
              <svg
                class=\\"mdc-select__dropdown-icon-graphic\\"
                viewBox=\\"7 10 10 5\\"
              >
                <polygon
                  class=\\"mdc-select__dropdown-icon-inactive\\"
                  fill-rule=\\"evenodd\\"
                  points=\\"7 10 12 15 17 10\\"
                  stroke=\\"none\\"
                />
                <polygon
                  class=\\"mdc-select__dropdown-icon-active\\"
                  fill-rule=\\"evenodd\\"
                  points=\\"7 15 12 10 17 15\\"
                  stroke=\\"none\\"
                />
              </svg>
            </span>
            <span
              class=\\"mdc-notched-outline mdc-notched-outline--no-label\\"
            >
              <span
                class=\\"mdc-notched-outline__leading\\"
              />
              <span
                class=\\"mdc-notched-outline__trailing\\"
              />
            </span>
          </div>
          <div
            class=\\"mdc-select__menu mdc-menu mdc-menu-surface mdc-menu-surface--fullwidth\\"
            role=\\"listbox\\"
          >
            <ul
              class=\\"mdc-list\\"
            >
              <li
                aria-selected=\\"true\\"
                class=\\"mdc-list-item mdc-list-item--selected\\"
                data-value=\\"10\\"
                role=\\"option\\"
                tabindex=\\"-1\\"
              >
                <span
                  class=\\"mdc-list-item__ripple\\"
                />
                <span
                  class=\\"mdc-list-item__text\\"
                >
                  10
                </span>
              </li>
              <li
                class=\\"mdc-list-item\\"
                data-value=\\"25\\"
                role=\\"option\\"
                tabindex=\\"-1\\"
              >
                <span
                  class=\\"mdc-list-item__ripple\\"
                />
                <span
                  class=\\"mdc-list-item__text\\"
                >
                  25
                </span>
              </li>
              <li
                class=\\"mdc-list-item\\"
                data-value=\\"50\\"
                role=\\"option\\"
                tabindex=\\"-1\\"
              >
                <span
                  class=\\"mdc-list-item__ripple\\"
                />
                <span
                  class=\\"mdc-list-item__text\\"
                >
                  50
                </span>
              </li>
              <li
                class=\\"mdc-list-item\\"
                data-value=\\"100\\"
                role=\\"option\\"
                tabindex=\\"-1\\"
              >
                <span
                  class=\\"mdc-list-item__ripple\\"
                />
                <span
                  class=\\"mdc-list-item__text\\"
                >
                  100
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class=\\"mdc-data-table__pagination-navigation\\"
      >
        <button
          class=\\"mdc-icon-button material-icons mdc-data-table__pagination-button\\"
          disabled=\\"\\"
        >
          <div
            class=\\"mdc-button__icon\\"
          >
            first_page
          </div>
        </button>
        <button
          class=\\"mdc-icon-button material-icons mdc-data-table__pagination-button\\"
          disabled=\\"\\"
        >
          <div
            class=\\"mdc-button__icon\\"
          >
            chevron_left
          </div>
        </button>
        <button
          class=\\"mdc-icon-button material-icons mdc-data-table__pagination-button\\"
        >
          <div
            class=\\"mdc-button__icon\\"
          >
            chevron_right
          </div>
        </button>
        <button
          class=\\"mdc-icon-button material-icons mdc-data-table__pagination-button\\"
        >
          <div
            class=\\"mdc-button__icon\\"
          >
            last_page
          </div>
        </button>
      </div>
    </div>
  </div>
</div>"
`;

exports[`DataTable component supports data table with pagination 2`] = `
"<div
  class=\\"mdc-data-table my-table\\"
>
  <div
    class=\\"mdc-data-table__table-container\\"
  >
    <table
      class=\\"mdc-data-table__table\\"
    >
      <thead>
        <tr
          class=\\"mdc-data-table__header-row\\"
        >
          <th
            class=\\"mdc-data-table__header-cell mdc-data-table__header-cell--numeric id-cell\\"
            role=\\"columnheader\\"
            scope=\\"col\\"
          >
            ID
          </th>
          <th
            class=\\"mdc-data-table__header-cell composer-cell\\"
            role=\\"columnheader\\"
            scope=\\"col\\"
          >
            Composer Name
          </th>
          <th
            class=\\"mdc-data-table__header-cell none\\"
            role=\\"columnheader\\"
            scope=\\"col\\"
          >
            
          </th>
        </tr>
      </thead>
      <tbody
        class=\\"mdc-data-table__content\\"
      >
        <tr
          class=\\"mdc-data-table__row\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            1
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
          >
            Wolfgang Amadeus Mozart
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./1\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            2
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
          >
            Ludwig van Beethoven
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./2\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            3
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
          >
            Antonio Vivaldi
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./3\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            4
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
          />
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./4\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            5
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
          >
            George Frideric Handel
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./5\\"
            >
              Show Details
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class=\\"mdc-data-table__pagination my-class\\"
  >
    <div
      class=\\"mdc-data-table__pagination-trailing\\"
    >
      <div
        class=\\"mdc-data-table__pagination-rows-per-page\\"
      >
        <div
          class=\\"mdc-data-table__pagination-rows-per-page-label\\"
        >
          Rows per page
        </div>
        <div
          class=\\"mdc-select mdc-select--outlined mdc-data-table__pagination-rows-per-page-select\\"
        >
          <div
            aria-disabled=\\"false\\"
            aria-haspopup=\\"listbox\\"
            class=\\"mdc-select__anchor\\"
            role=\\"button\\"
            tabindex=\\"0\\"
          >
            
            <span
              class=\\"mdc-select__selected-text\\"
            >
              5
            </span>
            <span
              class=\\"mdc-select__dropdown-icon\\"
            >
              <svg
                class=\\"mdc-select__dropdown-icon-graphic\\"
                viewBox=\\"7 10 10 5\\"
              >
                <polygon
                  class=\\"mdc-select__dropdown-icon-inactive\\"
                  fill-rule=\\"evenodd\\"
                  points=\\"7 10 12 15 17 10\\"
                  stroke=\\"none\\"
                />
                <polygon
                  class=\\"mdc-select__dropdown-icon-active\\"
                  fill-rule=\\"evenodd\\"
                  points=\\"7 15 12 10 17 15\\"
                  stroke=\\"none\\"
                />
              </svg>
            </span>
            <span
              class=\\"mdc-notched-outline mdc-notched-outline--no-label\\"
            >
              <span
                class=\\"mdc-notched-outline__leading\\"
              />
              <span
                class=\\"mdc-notched-outline__trailing\\"
              />
            </span>
          </div>
          <div
            class=\\"mdc-select__menu mdc-menu mdc-menu-surface mdc-menu-surface--fullwidth\\"
            role=\\"listbox\\"
          >
            <ul
              class=\\"mdc-list\\"
            >
              <li
                class=\\"mdc-list-item\\"
                data-value=\\"3\\"
                role=\\"option\\"
                tabindex=\\"-1\\"
              >
                <span
                  class=\\"mdc-list-item__ripple\\"
                />
                <span
                  class=\\"mdc-list-item__text\\"
                >
                  3
                </span>
              </li>
              <li
                aria-selected=\\"true\\"
                class=\\"mdc-list-item mdc-list-item--selected\\"
                data-value=\\"5\\"
                role=\\"option\\"
                tabindex=\\"-1\\"
              >
                <span
                  class=\\"mdc-list-item__ripple\\"
                />
                <span
                  class=\\"mdc-list-item__text\\"
                >
                  5
                </span>
              </li>
              <li
                class=\\"mdc-list-item\\"
                data-value=\\"10\\"
                role=\\"option\\"
                tabindex=\\"-1\\"
              >
                <span
                  class=\\"mdc-list-item__ripple\\"
                />
                <span
                  class=\\"mdc-list-item__text\\"
                >
                  10
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class=\\"mdc-data-table__pagination-navigation\\"
      >
        <div
          class=\\"mdc-data-table__pagination-total\\"
        >
          96-100 of 100
        </div>
        <button
          class=\\"mdc-icon-button material-icons mdc-data-table__pagination-button\\"
        >
          <div
            class=\\"mdc-button__icon\\"
          >
            first_page
          </div>
        </button>
        <button
          class=\\"mdc-icon-button material-icons mdc-data-table__pagination-button\\"
        >
          <div
            class=\\"mdc-button__icon\\"
          >
            chevron_left
          </div>
        </button>
        <button
          class=\\"mdc-icon-button material-icons mdc-data-table__pagination-button\\"
          disabled=\\"\\"
        >
          <div
            class=\\"mdc-button__icon\\"
          >
            chevron_right
          </div>
        </button>
        <button
          class=\\"mdc-icon-button material-icons mdc-data-table__pagination-button\\"
          disabled=\\"\\"
        >
          <div
            class=\\"mdc-button__icon\\"
          >
            last_page
          </div>
        </button>
      </div>
    </div>
  </div>
</div>"
`;

exports[`DataTable component supports data table with row selection 1`] = `
"<div
  class=\\"mdc-data-table\\"
>
  <div
    class=\\"mdc-data-table__table-container\\"
  >
    <table
      class=\\"mdc-data-table__table\\"
    >
      <thead>
        <tr
          class=\\"mdc-data-table__header-row\\"
        >
          <th
            class=\\"mdc-data-table__header-cell mdc-data-table__header-cell--checkbox\\"
            role=\\"columnheader\\"
            scope=\\"col\\"
          >
            <div
              class=\\"mdc-checkbox mdc-data-table__header-row-checkbox mdc-checkbox--upgraded mdc-checkbox--selected mdc-checkbox--anim-unchecked-indeterminate\\"
            >
              <input
                aria-checked=\\"mixed\\"
                aria-label=\\"Toggle all rows\\"
                class=\\"mdc-checkbox__native-control\\"
                type=\\"checkbox\\"
              />
              <div
                class=\\"mdc-checkbox__background\\"
              >
                <svg
                  class=\\"mdc-checkbox__checkmark\\"
                  viewBox=\\"0 0 24 24\\"
                >
                  <path
                    class=\\"mdc-checkbox__checkmark-path\\"
                    d=\\"M1.73,12.91 8.1,19.28 22.79,4.59\\"
                    fill=\\"none\\"
                  />
                </svg>
                <div
                  class=\\"mdc-checkbox__mixedmark\\"
                />
              </div>
              <div
                class=\\"mdc-checkbox__ripple\\"
              />
            </div>
          </th>
          <th
            class=\\"mdc-data-table__header-cell mdc-data-table__header-cell--numeric id-cell\\"
            role=\\"columnheader\\"
            scope=\\"col\\"
          >
            ID
          </th>
          <th
            class=\\"mdc-data-table__header-cell composer-cell\\"
            role=\\"columnheader\\"
            scope=\\"col\\"
          >
            Composer Name
          </th>
          <th
            class=\\"mdc-data-table__header-cell none\\"
            role=\\"columnheader\\"
            scope=\\"col\\"
          >
            
          </th>
        </tr>
      </thead>
      <tbody
        class=\\"mdc-data-table__content\\"
      >
        <tr
          class=\\"mdc-data-table__row mdc-data-table__row--selected\\"
          data-row-id=\\"1\\"
        >
          <td
            class=\\"mdc-data-table__cell mdc-data-table__cell--checkbox\\"
          >
            <div
              class=\\"mdc-checkbox mdc-checkbox--selected mdc-data-table__row-checkbox mdc-checkbox--upgraded\\"
            >
              <input
                checked=\\"\\"
                class=\\"mdc-checkbox__native-control\\"
                type=\\"checkbox\\"
              />
              <div
                class=\\"mdc-checkbox__background\\"
              >
                <svg
                  class=\\"mdc-checkbox__checkmark\\"
                  viewBox=\\"0 0 24 24\\"
                >
                  <path
                    class=\\"mdc-checkbox__checkmark-path\\"
                    d=\\"M1.73,12.91 8.1,19.28 22.79,4.59\\"
                    fill=\\"none\\"
                  />
                </svg>
                <div
                  class=\\"mdc-checkbox__mixedmark\\"
                />
              </div>
              <div
                class=\\"mdc-checkbox__ripple\\"
              />
            </div>
          </td>
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            1
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
          >
            Wolfgang Amadeus Mozart
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./1\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row\\"
          data-row-id=\\"2\\"
        >
          <td
            class=\\"mdc-data-table__cell mdc-data-table__cell--checkbox\\"
          >
            <div
              class=\\"mdc-checkbox mdc-data-table__row-checkbox mdc-checkbox--upgraded\\"
            >
              <input
                class=\\"mdc-checkbox__native-control\\"
                type=\\"checkbox\\"
              />
              <div
                class=\\"mdc-checkbox__background\\"
              >
                <svg
                  class=\\"mdc-checkbox__checkmark\\"
                  viewBox=\\"0 0 24 24\\"
                >
                  <path
                    class=\\"mdc-checkbox__checkmark-path\\"
                    d=\\"M1.73,12.91 8.1,19.28 22.79,4.59\\"
                    fill=\\"none\\"
                  />
                </svg>
                <div
                  class=\\"mdc-checkbox__mixedmark\\"
                />
              </div>
              <div
                class=\\"mdc-checkbox__ripple\\"
              />
            </div>
          </td>
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            2
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
          >
            Ludwig van Beethoven
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./2\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row\\"
          data-row-id=\\"3\\"
        >
          <td
            class=\\"mdc-data-table__cell mdc-data-table__cell--checkbox\\"
          >
            <div
              class=\\"mdc-checkbox mdc-data-table__row-checkbox mdc-checkbox--upgraded\\"
            >
              <input
                class=\\"mdc-checkbox__native-control\\"
                type=\\"checkbox\\"
              />
              <div
                class=\\"mdc-checkbox__background\\"
              >
                <svg
                  class=\\"mdc-checkbox__checkmark\\"
                  viewBox=\\"0 0 24 24\\"
                >
                  <path
                    class=\\"mdc-checkbox__checkmark-path\\"
                    d=\\"M1.73,12.91 8.1,19.28 22.79,4.59\\"
                    fill=\\"none\\"
                  />
                </svg>
                <div
                  class=\\"mdc-checkbox__mixedmark\\"
                />
              </div>
              <div
                class=\\"mdc-checkbox__ripple\\"
              />
            </div>
          </td>
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            3
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
          >
            Antonio Vivaldi
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./3\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row mdc-data-table__row--selected\\"
          data-row-id=\\"4\\"
        >
          <td
            class=\\"mdc-data-table__cell mdc-data-table__cell--checkbox\\"
          >
            <div
              class=\\"mdc-checkbox mdc-checkbox--selected mdc-data-table__row-checkbox mdc-checkbox--upgraded\\"
            >
              <input
                checked=\\"\\"
                class=\\"mdc-checkbox__native-control\\"
                type=\\"checkbox\\"
              />
              <div
                class=\\"mdc-checkbox__background\\"
              >
                <svg
                  class=\\"mdc-checkbox__checkmark\\"
                  viewBox=\\"0 0 24 24\\"
                >
                  <path
                    class=\\"mdc-checkbox__checkmark-path\\"
                    d=\\"M1.73,12.91 8.1,19.28 22.79,4.59\\"
                    fill=\\"none\\"
                  />
                </svg>
                <div
                  class=\\"mdc-checkbox__mixedmark\\"
                />
              </div>
              <div
                class=\\"mdc-checkbox__ripple\\"
              />
            </div>
          </td>
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            4
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
          />
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./4\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row\\"
          data-row-id=\\"5\\"
        >
          <td
            class=\\"mdc-data-table__cell mdc-data-table__cell--checkbox\\"
          >
            <div
              class=\\"mdc-checkbox mdc-data-table__row-checkbox mdc-checkbox--upgraded\\"
            >
              <input
                class=\\"mdc-checkbox__native-control\\"
                type=\\"checkbox\\"
              />
              <div
                class=\\"mdc-checkbox__background\\"
              >
                <svg
                  class=\\"mdc-checkbox__checkmark\\"
                  viewBox=\\"0 0 24 24\\"
                >
                  <path
                    class=\\"mdc-checkbox__checkmark-path\\"
                    d=\\"M1.73,12.91 8.1,19.28 22.79,4.59\\"
                    fill=\\"none\\"
                  />
                </svg>
                <div
                  class=\\"mdc-checkbox__mixedmark\\"
                />
              </div>
              <div
                class=\\"mdc-checkbox__ripple\\"
              />
            </div>
          </td>
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            5
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
          >
            George Frideric Handel
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./5\\"
            >
              Show Details
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`DataTable component supports standard data table 1`] = `
"<div
  class=\\"mdc-data-table\\"
>
  <div
    class=\\"mdc-data-table__table-container\\"
  >
    <table
      class=\\"mdc-data-table__table\\"
    >
      <thead>
        <tr
          class=\\"mdc-data-table__header-row\\"
        >
          <th
            class=\\"mdc-data-table__header-cell mdc-data-table__header-cell--numeric id-cell\\"
            role=\\"columnheader\\"
            scope=\\"col\\"
          >
            ID
          </th>
          <th
            class=\\"mdc-data-table__header-cell composer-cell\\"
            role=\\"columnheader\\"
            scope=\\"col\\"
            title=\\"composer-column\\"
          >
            Composer Name
          </th>
          <th
            class=\\"mdc-data-table__header-cell none\\"
            role=\\"columnheader\\"
            scope=\\"col\\"
          >
            
          </th>
        </tr>
      </thead>
      <tbody
        class=\\"mdc-data-table__content\\"
      >
        <tr
          class=\\"mdc-data-table__row odd\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            1
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
            data-name=\\"Wolfgang Amadeus Mozart\\"
            title=\\"composer\\"
          >
            Wolfgang Amadeus Mozart
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./1\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row even\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            2
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
            data-name=\\"Ludwig van Beethoven\\"
            title=\\"composer\\"
          >
            Ludwig van Beethoven
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./2\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row odd\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            3
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
            data-name=\\"Antonio Vivaldi\\"
            title=\\"composer\\"
          >
            Antonio Vivaldi
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./3\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row even\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            4
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
            title=\\"composer\\"
          />
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./4\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row odd\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            5
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
            data-name=\\"George Frideric Handel\\"
            title=\\"composer\\"
          >
            George Frideric Handel
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./5\\"
            >
              Show Details
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`DataTable component supports standard data table 2`] = `
"<div
  class=\\"mdc-data-table my-table\\"
>
  <div
    class=\\"mdc-data-table__table-container\\"
  >
    <table
      class=\\"mdc-data-table__table\\"
    >
      <tbody
        class=\\"mdc-data-table__content\\"
      >
        <tr
          class=\\"mdc-data-table__row\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            1
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
            data-name=\\"Wolfgang Amadeus Mozart\\"
            title=\\"composer\\"
          >
            Wolfgang Amadeus Mozart
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./1\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            2
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
            data-name=\\"Ludwig van Beethoven\\"
            title=\\"composer\\"
          >
            Ludwig van Beethoven
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./2\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            3
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
            data-name=\\"Antonio Vivaldi\\"
            title=\\"composer\\"
          >
            Antonio Vivaldi
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./3\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            4
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
            title=\\"composer\\"
          />
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./4\\"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          class=\\"mdc-data-table__row\\"
        >
          <th
            class=\\"mdc-data-table__cell mdc-data-table__cell--numeric id-cell\\"
            scope=\\"row\\"
          >
            5
          </th>
          <td
            class=\\"mdc-data-table__cell composer-cell composer-body-cell\\"
            data-name=\\"George Frideric Handel\\"
            title=\\"composer\\"
          >
            George Frideric Handel
          </td>
          <td
            class=\\"mdc-data-table__cell\\"
          >
            <a
              href=\\"./5\\"
            >
              Show Details
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;
